--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,8 +1,5 @@
 {
-  "title": "Welcome",
-  "language_settings": "Language Settings",
-  "choose_language": "Choose your language",
-  "save": "Save",
+  "select":"Select",
   "chooseRole": "Choose your role",
   "customer": "Customer",
   "driver": "Driver",
