--- a/lib/l10n/app_ps.arb
+++ b/lib/l10n/app_ps.arb
@@ -7,5 +7,6 @@
   "newBookings": "نوې بکینګونه",
   "liveTrip": "ژوندی سفر",
   "upcomingBookings": "راتلونکي بکینګونه",
-  "pastBookings": "تېر بکینګونه"
+  "pastBookings": "تېر بکینګونه",
+  "select":"select"
 }
