--- a/lib/l10n/app_ur.arb
+++ b/lib/l10n/app_ur.arb
@@ -7,6 +7,6 @@
   "newBookings": "نئی بکنگز",
   "liveTrip": "چالو سفر",
   "upcomingBookings": "آنے والی بکنگز",
-  "pastBookings": "گزشتہ بکنگز"
-
+  "pastBookings": "گزشتہ بکنگز",
+"select":"select"
 }
